# pipelines

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  entrypoint.sh
anchor/: .env.sample  .gitignore  Dockerfile  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt
anchor/job/: __main__.py  fetch_params.py  open_podcast.py  test_load_env.py  test_transforms.py  test_worker.py  transforms.py  worker.py
connector_manager/: .gitignore  Makefile  README.md  crontab  entrypoint.py  env.example  pyproject.toml  requirements.txt  run_cron_scheduler.sh  run_huey_consumer.py  run_scheduler.py  test_huey_migration.py
connector_manager/manager/: __main__.py  async_worker.py  cryptography.py  huey_config.py  load_env.py  podigee_connector.py  podigee_oauth.py  scheduler.py  tasks.py  tasks_old.py  test_cryptography.py  test_podigee_connector.py  waitinglist_checker.py  worker.py
podigee/: .env.sample  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
podigee/job/: __main__.py  date_utils.py  dates.py  fetch_params.py  open_podcast.py  test_date_utils.py  test_transform.py  transforms.py  worker.py
spotify/: .env.sample  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  main.py  metadata-2022-10-25 13:51:37.191473.json  metadata.json  pyproject.toml  requirements.txt
spotify/aggregate/: 08VSwqmWlk8DgknnmwYxK0-2022-10-06 10:13:05.484815.json  0B3LoAAfZbllsTw1KyYIjx-2022-10-26 11:08:44.966652.json  0B3LoAAfZbllsTw1KyYIjx-2022-10-26 12:28:37.842067.json  0B3LoAAfZbllsTw1KyYIjx-2022-10-27 11:15:42.100310.json  0B3LoAAfZbllsTw1KyYIjx-2022-10-29 11:15:01.544277.json  0uT54qYXLeoYPIerWNK6WY-2022-10-27 11:23:36.679042.json  0uT54qYXLeoYPIerWNK6WY-2022-10-30 11:22:54.349648.json  0uT54qYXLeoYPIerWNK6WY-2022-10-31 11:25:00.827450.json  10M5UFnQfcQXwYTIFjQrqP-2022-10-24 10:26:50.059962.json  10M5UFnQfcQXwYTIFjQrqP-2022-10-27 11:20:54.417203.json  10M5UFnQfcQXwYTIFjQrqP-2022-10-28 11:21:40.359376.json  10M5UFnQfcQXwYTIFjQrqP-2022-10-31 11:22:09.377345.json  10M5UFnQfcQXwYTIFjQrqP-2022-10-31 11:22:11.894350.json  11sFbhhPfqhw5ICp85CnDN-2022-10-30 11:13:02.674569.json  11sFbhhPfqhw5ICp85CnDN-2022-10-31 11:15:09.169015.json  12B15FQ84hAfopW5d8AJPA-2022-10-26 12:12:51.708802.json  12B15FQ84hAfopW5d8AJPA-2022-10-29 10:13:09.362406.json  12B15FQ84hAfopW5d8AJPA-2022-10-29 10:13:11.893324.json  12B15FQ84hAfopW5d8AJPA-2022-10-31 14:01:01.725004.json  1OEVURealPs0TxTg4DGLFR-2022-10-29 11:22:38.890757.json  1OEVURealPs0TxTg4DGLFR-2022-10-29 11:22:41.895575.json  1OEVURealPs0TxTg4DGLFR-2022-10-31 11:24:45.699854.json  1OvywjCGrYah9AGX6w8Bnn-2022-10-26 12:26:03.901751.json  1OvywjCGrYah9AGX6w8Bnn-2022-10-27 11:13:16.896297.json  1OvywjCGrYah9AGX6w8Bnn-2022-10-27 11:13:19.360878.json  1OvywjCGrYah9AGX6w8Bnn-2022-10-28 11:13:44.530222.json  1OvywjCGrYah9AGX6w8Bnn-2022-10-30 11:12:16.829827.json  1OvywjCGrYah9AGX6w8Bnn-2022-10-31 11:14:20.605994.json  1V1n57J1JlwQvq6liID45p-2022-10-28 11:17:19.638033.json  1fAhILuNB97dYWuuiI9NwQ-2022-10-26 12:35:58.149746.json  1vWJTaoipaGryKcGJOoUF6-2022-10-26 12:28:55.473452.json  1vWJTaoipaGryKcGJOoUF6-2022-10-27 11:15:59.282554.json  1vWJTaoipaGryKcGJOoUF6-2022-10-28 11:16:36.681139.json  1vWJTaoipaGryKcGJOoUF6-2022-10-30 11:15:05.928061.json  (+89 more)
spotify/job/: __main__.py  (+11 more)
(+879 files in other folders)
