[project]
name = "podigee-pipeline"
version = "0.1.0"
description = "Open Podcast pipeline that fetches podcast analytics from the Podigee API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Open Podcast" },
]

dependencies = [
    "podigeeconnector>=0.4.1",
    "loguru>=0.7.3",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.2.0",
    "ruff>=0.6.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["job"]
python_files = ["test_*.py"]